[gd_scene load_steps=8 format=3 uid="uid://cg7cw5eoa4pcd"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_wbsbi"]
[ext_resource type="Script" uid="uid://bcflwjiklc2uo" path="res://src/windows/sfx_editor/sfx_editor_window.gd" id="2_7qk70"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_kvtwo"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_rq1sk"]
[ext_resource type="PackedScene" uid="uid://bwfryqyo2a04c" path="res://src/windows/sfx_editor/sound_effects.tscn" id="5_rq1sk"]
[ext_resource type="PackedScene" uid="uid://c4n3x17743rei" path="res://src/windows/sfx_editor/audio_clip_editor_window.tscn" id="6_bp70a"]
[ext_resource type="PackedScene" uid="uid://de6v51e5rld6l" path="res://src/windows/sfx_editor/sfx_selector_window.tscn" id="7_xyr4a"]

[node name="SFXEditorWindow" instance=ExtResource("1_wbsbi")]
offset_right = 954.0
offset_bottom = 677.0
theme = ExtResource("2_kvtwo")
script = ExtResource("2_7qk70")
panel_corner_radius = 0
panel_style_override = ExtResource("4_rq1sk")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ListContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 8
text = "Available SFX Packs"
horizontal_alignment = 1

[node name="SFXPackList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="SFXPackPopupMenu" type="PopupMenu" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer/SFXPackList" index="2"]
unique_name_in_owner = true
item_count = 3
item_0/text = "Rename"
item_0/id = 0
item_1/text = "Delete"
item_1/id = 1
item_2/text = "Duplicate"
item_2/id = 2

[node name="MarginContainer2" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 8
text = "Name:"

[node name="SFXPackNameLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 8
text = "SFX Count:"

[node name="CountLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer6" index="0"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 8
text = "Filesize:"

[node name="FilesizeLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer6" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer" index="2"]
layout_mode = 2

[node name="NewButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Create New"

[node name="DuplicateButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Duplicate"

[node name="ActivateButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Make Active"

[node name="EditButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer" index="3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Edit"

[node name="EditContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="SoundEffects" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer" index="0" instance=ExtResource("5_rq1sk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer" index="2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Back"

[node name="SuccessLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 100, 0, 1)
text = "Success!"
horizontal_alignment = 2

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Save"

[node name="SubWindows" type="Control" parent="." index="2"]
layout_mode = 2
mouse_filter = 2

[node name="AudioClipEditor" parent="SubWindows" index="0" instance=ExtResource("6_bp70a")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -580.5
offset_top = -382.0
offset_right = 580.5
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2

[node name="SFXSelector" parent="SubWindows" index="1" instance=ExtResource("7_xyr4a")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -532.5
offset_top = -321.5
offset_right = 532.5
offset_bottom = 321.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer/SFXPackList" to="." method="_on_sfx_pack_list_item_activated"]
[connection signal="item_clicked" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer/SFXPackList" to="." method="_on_sfx_pack_list_item_clicked"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer/SFXPackList" to="." method="_on_sfx_pack_list_item_selected"]
[connection signal="index_pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer2/MarginContainer/VBoxContainer/SFXPackList/SFXPackPopupMenu" to="." method="_on_sfx_pack_popup_menu_index_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer/ActivateButton" to="." method="_on_activate_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/ListContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/EditContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
